packages/Arete/LadiesHub/src/Resources/assets/sass/app.scss
/* ... */
/* slider styles */
section.slider-block {
    display: block;
    margin-left: auto;
    margin-right: auto;
    // margin-bottom: 2rem;
    // margin-bottom: 5%;

    div.slider-content {
        position: relative;
        margin-left: auto;
        margin-right: auto;


        ul.slider-images {

            .show-content {
                display: none;
            }

            li{
                position: absolute;
                visibility: hidden;
            }

            li.show {
                display:block;
                position: relative;
                visibility: visible;
                width: 100%;
                animation-name: example;
                animation-duration: 4s;

                .show-content {
                    display: flex;
                    position: absolute;
                    flex-direction: row;
                    justify-content: center;
                    align-items: center;
                    color: $font-dark;
                    height: 100%;
                    width: 100%;
                    top: 0px;

                    // * {
                    //     color: blue;
                    //     font-size: 112px;
                    // }
                }
            }

            @keyframes example {
                0%   {opacity: 0.1;}
                100% {opacity: 1;}
            }

            li img {
                height: 500px;
                width: 100%;
                object-fit: cover;
                object-position: right;
            }
        }

        div.slider-control {
            display: block;
            cursor: pointer;
            position: absolute;
            user-select: none;
            bottom: 2%;
            right: 2%;

            .dark-left-icon {
                background-color: white;
                height: 48px;
                width: 48px;
                max-height: 100%;
                max-width: 100%;
            }

            .light-right-icon {
                background-color: black;
                height: 48px;
                width: 48px;
                max-height: 100%;
                max-width: 100%;
            }
        }
    }
}

/* responsive css for slider */
@media only screen and (max-width: 720px) {
    section.slider-block {
        // margin-left: -1rem;
        // margin-right: -1rem;
        div.slider-content {
            ul.slider-images li img {
                height: 50vh;
                object-position: left;
            }
            div.slider-control {
                display: flex;
                justify-content: space-between;
                width: 100%;
                bottom: 40%;
                right: 0%;
            }
        }
    }
}

@media only screen and (max-width: 420px) {
    section.slider-block {
        div.slider-content {
            ul.slider-images {
                li img {
                    width: 100%;
                    height: 250px;
                }
            }

            div.slider-control {
                display: flex;
                justify-content:space-between;
                width: 100%;
                bottom: 40%;
                right: 0%;
            }
        }
    }
}

/* header navigation */
.main-header-wrapper {

}

.header-wrapper {
    position: fixed;
    z-index: 2;
    background-color: white;
    width: 100%;
    top:0px;
}
/* ... */

